src/main/webapp/assets/css/main.css
/* ... */
/* Narrower */

	@media screen and (max-width: 1000px) {

		/* Basic */

			body, input, textarea, select {
				font-size: 13pt;
			}

			.container > .container {
				width: 100% !important;
			}

		/* Main */

			.main.style2 .content {
				width: 60%;
			}

			.main.style2.right .content {
				left: 40%;
			}

			.main.style2.inactive.left .content {
				left: -60%;
			}

		/* Footer */

			#footer {
				height: auto;
				line-height: inherit;
				text-align: center;
				padding: 2em 1em 2em 1em;
			}

				#footer .actions {
					position: relative;
					left: 0;
					top: 0;
					height: auto;
					line-height: inherit;
					margin: 0 0 1em 0;
				}

				#footer .menu {
					position: relative;
					right: 0;
					top: 0;
					height: auto;
					line-height: inherit;
				}

	}

/* Mobile */

	@media screen and (max-width: 736px) {

		/* Basic */

			body {
				min-width: 320px;
				font-size: 12pt;
				line-height: 1.5em;
			}

			input, textarea, select {
				font-size: 12pt;
				line-height: 1.5em;
			}

			h2 {
				font-size: 1.5em;
				letter-spacing: -1px;
			}

		/* Box */

			.box {
				padding: 1em;
			}

				.box.style2 {
					padding: 1.5em 1.25em 1.5em 1.25em;
					background-color: rgba(255, 255, 255, 0.9);
				}

		/* Main */

			.main.fullscreen {
				height: auto !important;
			}

			.main.style1 {
				padding: 4em 15px 4em 15px;
			}

				.main.style1 h2 {
					font-size: 3em;
					letter-spacing: -3px;
				}

			.main.style2 {
				padding: 6em 15px 6em 15px;
			}

				.main.style2:before, .main.style2:after {
					display: none !important;
				}

				.main.style2 .button.anchored {
					display: none;
				}

				.main.style2 .content {
					width: 100%;
					left: 0% !important;
					text-align: center;
				}

				.main.style2 .tmp {
					width: 100%;
					height: 10em;
					background-size: cover;
				}

			.main.style3 {
				text-align: center;
				padding: 3em 10px 3em 10px;
			}

		/* Header */

			#header {
				height: 2.5em;
				line-height: 2.5em;
			}

			body {
				padding-top: 2.5em;
			}

			#logo {
				text-align: center;
				position: relative;
				left: 0;
				top: 0;
				height: 2.5em;
				line-height: 2.5em;
			}

				#logo a {
					font-size: 1em;
				}

			#nav {
				display: none;
			}

		/* Footer */

			#footer .menu li {
				border-left: 0;
				padding: 1em 0 0 0;
				margin: 0;
				display: block;
			}

				#footer .menu li:first-child {
					padding-top: 0;
				}

				#footer .menu li a {
					line-height: 1.5em;
				}

		/* Poptrox */

			.poptrox-popup .nav-next:before,
			.poptrox-popup .nav-previous:before {
				width: 48px;
				height: 32px;
				background-size: contain;
				margin: -16px 0 0 0;
			}

			.poptrox-popup .closer:before {
				right: 12px;
				top: 12px;
				width: 20px;
				height: 20px;
				box-shadow: inset 0 0 0 1px #fff;
				background-size: contain;
				opacity: 0.65;
			}

	}

